--- a/webpage.css
+++ b/webpage.css
@@ -10,7 +10,7 @@ p, .box-1, .box-2, .box-3  {
   text-align: center;
 }
 .section-one      {
-  background-image:url('images/beach.jpg');
+  background-image:url('beach.jpg');
   background-repeat: no-repeat;
   background-attachment:scroll;
   background-size: cover;
